Fix strange overlap caused by grid gap

--- a/src/pages/RecipeListPage/components/RecipeCard.module.css
+++ b/src/pages/RecipeListPage/components/RecipeCard.module.css
@@ -7,6 +7,7 @@
   border: #cccccc solid 1px;
   border-radius: 4%;
   padding: 5%;
+  margin: 2%;
 }
 
 .card img {
