--- a/src/pages/RecipeListPage/components/RecipeGrid.module.css
+++ b/src/pages/RecipeListPage/components/RecipeGrid.module.css
@@ -1,7 +1,6 @@
 .recipe-grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 5%;
   padding: 0;
   margin: 5%;
 }
